# streamlit-chatbot-demo

./: README.MD  app.py  main.py  pyproject.toml  requirements.txt
src/: chat_manager.py  client.py  file_processor.py  rag_pipeline.py  ui.py
