[project]
name = "streamlit-chatbot-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.66.3",
    "pdfplumber>=0.11.5",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "streamlit>=1.43.2",
    "tiktoken>=0.9.0",
]
